fix #1089 homebutton aligned  in both map and user manager page

--- a/web/client/product/assets/css/viewer.css
+++ b/web/client/product/assets/css/viewer.css
@@ -15,6 +15,9 @@ html, body, #container, .fill {
     overflow: hidden;
 }
 #home-button {
+    float: left;
+}
+#page-manager #home-button {
     float: right;
 }
 .hidden {
